ServiceImplementation/backend_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-httpd
    environment: dev
  ports:
  - port: 5000
    targetPort: 80
