ServiceImplementation/frontend_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svs
spec:
  selector:
    app: frontend-nginx
    environment: dev
  ports:
  - port: 80
    targetPort: 80
