ServiceImplementation/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserverlb
  labels:
    name: webserverlb
spec:
  rules:
  - host: webapp.info
    http:
      paths:
      - pathType: Prefix
        path: "/backend"
        backend:
          service:
            name: backend-svc
            port: 
              number: 5000
      - pathType: Prefix
        path: "/frontend"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 80
